--- a/Server-phone-pe/package.json
+++ b/Server-phone-pe/package.json
@@ -15,8 +15,10 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "mongoose": "^8.6.2",
-    "nodemon": "^3.1.4"
+    "express": "^4.21.1",
+    "mongoose": "^8.8.0",
+    "nodemon": "^3.1.7",
+    "react-script": "^2.0.5",
+    "webpack": "^5.96.1"
   }
 }
